[package]
name = "wasm32"
version = "0.1.0"
authors = ["Mr.4NK"]
edition = "2020"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "wasm32_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
base32 = "0.4.0"
